# axon

./: .deploy.env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_REFACTOR_PLAN.md  AUDIO_PLAN.md  Cargo.toml  GOOGLE_ADAPTER_PLAN.md  Improvement Plan.md  NODE_EXPANSION_PLAN.md  PRODUCTION_READINESS_PLAN.md  README.md  USER_GUIDE.md  canchowlung.bat  cham.bat  deny.toml  deploy.sh  deployaxon-wipe.sh  deployaxongcp.sh  deployaxongcp.sh.example  deploycham-wipe.sh  deploycham.sh  deploycham.sh.example  deploychamgcp.sh  deploychamgcp.sh.example  deployfrontend.sh  microsoft-identity-association.json  plan.md  push.bat  run.bat  server
axon/: Cargo.toml  README.md
axon-api-proxy/: Cargo.toml  axon-api-proxy.service  deploy.sh  deploygcp.sh  models.toml
axon-api-proxy/src/: api.rs  config.rs  dashboard.html  error.rs  main.rs  pool.rs  proxy.rs
axon-mcp-server/: .gitignore  Cargo.toml  Makefile  README.md
axon-mcp-server/crates/axon-business/src/: notes.rs  tasks.rs
axon-mcp-server/crates/axon-core/: Cargo.toml
axon-mcp-server/crates/axon-core/src/: lib.rs  oauth.rs  storage.rs
axon-mcp-server/crates/axon-crm/: Cargo.toml
axon-mcp-server/crates/axon-crm/src/: db.rs  lib.rs  orgs.rs  tests.rs
axon-mcp-server/crates/axon-facebook/: Cargo.toml  err-out.txt
axon-mcp-server/crates/axon-facebook/src/: auth.rs  comments.rs  insights.rs  messaging.rs  page.rs  posts.rs
axon-mcp-server/crates/axon-google/: Cargo.toml
axon-mcp-server/crates/axon-google/src/: auth.rs  calendar.rs  chat.rs  contacts.rs  docs.rs  drive.rs  forms.rs  gmail.rs  meet.rs  places.rs  sheets.rs  slides.rs  tasks.rs  youtube.rs
axon-mcp-server/crates/axon-instagram/src/: lib.rs
axon-mcp-server/crates/axon-microsoft/src/: auth.rs  calendar.rs  onedrive.rs  outlook.rs  teams.rs
axon-mcp-server/src/: main.rs
axon-voice/rustpotter-jni/: Cargo.toml
axon-voice/rustpotter-jni/src/: lib.rs
axon/static/: app.js  index.html  style.css
crates/axon-agent/: .env.example  .gitignore  Cargo.toml
crates/axon-agent/assets/: node_types.json
crates/axon-agent/config/: models.toml
crates/axon-agent/src/: crypto.rs  error_reporting.rs  files.rs  http.rs  lib.rs  main.rs  maintenance.rs  model_cache.rs  notify.rs  observability.rs  state.rs  stt.rs  tts.rs
crates/axon-agent/src/agent/: context.rs  internal_tools.rs  loop.rs  mod.rs  notifications.rs  plan.rs  quality.rs  repair.rs  system_context.rs  tool_discovery.rs  tool_writer.rs
crates/axon-agent/src/config/: loader.rs  mod.rs  runtime_settings.rs
crates/axon-agent/src/dashboard/: api.rs  auth.rs  media.rs  mod.rs  server.rs  ws.rs
crates/axon-agent/src/dashboard/api/: audio.rs  channels.rs  chat_memory.rs  credentials.rs  crm.rs  google.rs  infra.rs  jobs.rs  mcp_files.rs  mod.rs  models.rs  notifications.rs  oauth.rs  runs.rs  settings.rs  tools_router.rs  watchers.rs  workflows.rs
crates/axon-agent/src/db/: mod.rs  normalize.sql  seed.sql
crates/axon-agent/src/db/migrations/: 0001_base_schema.sql  0004_telegram_reply_routes.sql  0005_durable_wait.sql  0006_facebook_webhook_page.sql  0007_node_reliability.sql  0008_workflow_updated_at.sql  0009_error_workflow_and_pins.sql  0010_workflow_versions.sql  0011_resume_tokens.sql  0012_trigger_dedup.sql  0013_drop_resume_tokens.sql  0014_conversations.sql  0015_model_thinking_mode.sql  0016_shell_tool_routing.sql  0017_embedding_model.sql  0018_model_origin.sql  0019_ssh_host_key_fingerprint.sql  0020_tool_overrides.sql  0021_remove_crm_agent_write_tools_setting.sql  0022_short_term_fts.sql  0023_classifier_to_text_analysis.sql  0024_workflow_dedupe_seen.sql  0025_provider_model_cache.sql  0026_workflow_backups.sql  0027_tts_piper_description.sql  0028_notifications.sql  0029_model_disabled_reason.sql
crates/axon-agent/src/mcp/: client.rs  inprocess.rs
crates/axon-agent/src/memory/: compressor.rs  embeddings.rs  long_term.rs  mod.rs  short_term.rs  store.rs
crates/axon-agent/src/messaging/: discord.rs  mod.rs  slack.rs  streaming.rs  telegram.rs
crates/axon-agent/src/providers/: anthropic.rs  google.rs  list.rs  mod.rs  ollama.rs  openai_compat.rs  types.rs
crates/axon-agent/src/router/: mod.rs  model_router.rs  tool_router.rs
crates/axon-agent/src/scheduler/: engine.rs  nl_parser.rs  store.rs
crates/axon-agent/src/tools/: file_handler.rs  http.rs  image_tool.rs  mod.rs  myelin.rs  overrides.rs  registry.rs  runner.rs  schema.rs  shell.rs  ssh.rs  telegram.rs  web_search.rs  whatsapp.rs  workflow.rs
crates/axon-agent/src/watcher/: engine.rs
crates/axon-agent/src/webhook/: external.rs  facebook.rs  github.rs  mod.rs  responder.rs  signature.rs
crates/axon-agent/static/: manifest.json
crates/axon-agent/static/icons/: README.md
crates/axon-agent/static/rustpotter/: heyaxon.rpw
crates/axon-business/: Cargo.toml
crates/axon-business/src/: contacts.rs  datetime.rs  lib.rs  text.rs  web.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: flexidate.rs  lib.rs  oauth.rs  storage.rs
crates/axon-crm/: Cargo.toml  crm-guide.md
crates/axon-crm/src/: activities.rs  db.rs  deals.rs  leads.rs  lib.rs  orgs.rs  records.rs  tests.rs  utils.rs  views.rs
crates/axon-crm/src/migrations/: 0001_base_schema.sql  0002_amount_minor_cents.sql  0003_utc_timestamps.sql  0004_activity_tasks.sql
crates/axon-facebook/: Cargo.toml  err.txt
crates/axon-facebook/src/: auth.rs  comments.rs  insights.rs  lib.rs  messaging.rs  page.rs  posts.rs
crates/axon-google/: Cargo.toml
crates/axon-google/src/: auth.rs  calendar.rs  chat.rs  contacts.rs  docs.rs  drive.rs  forms.rs  gmail.rs  lib.rs  meet.rs  places.rs  sheets.rs  slides.rs  tasks.rs  youtube.rs
crates/axon-image/: Cargo.toml
crates/axon-image/examples/: quote_image.rs  quote_video.rs
crates/axon-image/src/: batch.rs  composite.rs  error.rs  filters.rs  lib.rs  pipeline.rs  text.rs  video.rs
crates/axon-instagram/: Cargo.toml
crates/axon-instagram/src/: lib.rs
crates/axon-microsoft/: Cargo.toml
crates/axon-microsoft/src/: auth.rs  calendar.rs  lib.rs  onedrive.rs  outlook.rs  teams.rs
(+284 files in other folders)
