[workspace]
resolver = "2"
members = ["crates/*"]

# Profiles are honored only at the workspace root, so they live here rather
# than in the individual member crates.
[profile.dev]
debug         = 0
codegen-units = 1
incremental   = false

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
