[package]
name = "axon-api-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axon-api-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = "0.4.44"
rand = "0.10.1"
