[workspace]
resolver = "2"
members = [
    "crates/axon-core",
    "crates/axon-google",
    "crates/axon-microsoft",
    "crates/axon-facebook",
    "crates/axon-instagram",
    "crates/axon-business",
    "crates/axon-crm",
]

# This is a virtual workspace: the integration crates above are compiled
# directly into axon-agent as path dependencies (see axon-agent/Cargo.toml).
# The old standalone `axon-mcp` binary that ran on :8080 was removed when the
# MCP server was merged in-process — there is no root package or [[bin]] here.

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
