[package]
name    = "axon"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
tokio               = { version = "1",    features = ["full"] }
tokio-stream        = "0.1"
futures             = "0.3"
reqwest             = { version = "0.12", features = ["json", "stream", "multipart"] }
axum                = { version = "0.7",  features = ["macros", "ws", "multipart"] }
tower               = "0.4"
tower-http          = { version = "0.5",  features = ["fs", "cors"] }
serde               = { version = "1",    features = ["derive"] }
serde_json          = "1"
toml                = "0.8"
rusqlite            = { version = "0.32", features = ["bundled"] }
r2d2                = "0.8"
r2d2_sqlite         = "0.25"
dotenvy             = "0.15"
tokio-cron-scheduler = "0.13"
regex               = "1"
once_cell           = "1"
anyhow              = "1"
thiserror           = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
uuid                = { version = "1",   features = ["v4"] }
chrono              = { version = "0.4", features = ["serde"] }
async-trait         = "0.1"
sha2                = "0.10"
mime_guess          = "2"
russh               = "0.45"
russh-keys          = "0.45"
base64              = "0.22"
urlencoding = "2.1.3"
reqwest-eventsource = "0.6.0"
