[package]
name    = "axon"
version = "0.4.0"
edition = "2021"
publish = false
default-run = "axon"

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
tokio               = { version = "1",    features = ["full"] }
tokio-stream        = "0.1"
futures             = "0.3"
# default-features off drops native-tls (OpenSSL) so the whole workspace
# shares one rustls stack; http2 + charset restore the defaults we still want.
reqwest             = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "cookies", "gzip", "brotli", "deflate", "http2", "charset", "rustls-tls"] }
axum                = { version = "0.7",  features = ["macros", "ws", "multipart"] }
tower               = "0.4"
tower-http          = { version = "0.5",  features = ["fs", "cors"] }
serde               = { version = "1",    features = ["derive"] }
serde_json          = "1"
toml                = "0.8"
rusqlite            = { version = "0.32", features = ["bundled"] }
r2d2                = "0.8"
r2d2_sqlite         = "0.25"
dotenvy             = "0.15"
tokio-cron-scheduler = "0.13"
regex               = "1"
once_cell           = "1"
anyhow              = "1"
thiserror           = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
uuid                = { version = "1",   features = ["v4"] }
chrono              = { version = "0.4", features = ["serde"] }
async-trait         = "0.1"
sha2                = "0.10"
hmac                = "0.12"
hex                 = "0.4"
mime_guess          = "2"
russh               = "0.45"
russh-keys          = "0.45"
base64              = "0.22"
urlencoding = "2.1.3"
reqwest-eventsource = "0.6.0"
aes-gcm = "0.10.3"
subtle = "2"
rand = "0.8.5"
qdrant-client = "1.8.0"
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.22.0"
chrono-tz = "0.10.4"
dirs = "5.0"
# C3 observability: Prometheus /metrics. default-features off so we don't pull the
# crate's own HTTP listener — we render via our existing axum router instead.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
boa_engine = "0.20.0"
jmespath = "0.5"
cron = "0.16.0"
image_processor  = { path = "../axon-image" }
image = "0.25"

# In-process MCP integration services (Google/Microsoft/Facebook/Instagram/CRM).
rmcp           = { version = "0.1", features = ["server"] }
axon-core      = { path = "../axon-core" }
axon-google    = { path = "../axon-google" }
axon-microsoft = { path = "../axon-microsoft" }
axon-facebook  = { path = "../axon-facebook" }
axon-instagram = { path = "../axon-instagram" }
axon-business  = { path = "../axon-business" }
axon-crm       = { path = "../axon-crm" }

