[package]
name    = "axon"
version = "0.4.0"
edition = "2021"
publish = false
default-run = "axon"

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
tokio               = { version = "1",    features = ["full"] }
tokio-stream        = "0.1"
futures             = "0.3"
# default-features off drops native-tls (OpenSSL) so the whole workspace
# shares one rustls stack; http2 + charset restore the defaults we still want.
reqwest             = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "cookies", "gzip", "brotli", "deflate", "http2", "charset", "rustls-tls"] }
axum                = { version = "0.7",  features = ["macros", "ws", "multipart"] }
tower               = "0.4"
tower-http          = { version = "0.5",  features = ["fs", "cors"] }
serde               = { version = "1",    features = ["derive"] }
serde_json          = "1"
toml                = "0.8"
rusqlite            = { version = "0.32", features = ["bundled"] }
r2d2                = "0.8"
r2d2_sqlite         = "0.25"
dotenvy             = "0.15"
tokio-cron-scheduler = "0.13"
regex               = "1"
once_cell           = "1"
anyhow              = "1"
thiserror           = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
uuid                = { version = "1",   features = ["v4"] }
chrono              = { version = "0.4", features = ["serde"] }
async-trait         = "0.1"
sha2                = "0.10"
hmac                = "0.12"
hex                 = "0.4"
mime_guess          = "2"
russh               = "0.45"
russh-keys          = "0.45"
base64              = "0.22"
urlencoding = "2.1.3"
reqwest-eventsource = "0.6.0"
aes-gcm = "0.10.3"
subtle = "2"
rand = "0.8.5"
qdrant-client = "1.8.0"
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.22.0"
chrono-tz = "0.10.4"
dirs = "5.0"
# C3 observability: Prometheus /metrics. default-features off so we don't pull the
# crate's own HTTP listener — we render via our existing axum router instead.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
boa_engine = "0.20.0"
jmespath = "0.5"
cron = "0.16.0"
image_processor  = { path = "../axon-image" }
image = "0.25"

# Universal Database node driver. rustls-only (default-features off) to keep the
# workspace on one TLS stack — see the reqwest config above. The `any` backend
# gives one runtime-generic code path over postgres/mysql(+mariadb)/sqlite.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls-ring",
    "any", "postgres", "mysql", "sqlite",
] }

# Node 2.3 HTML Extract: CSS-selector extraction. No default features (drops the
# CLI-example deps); compile-heavy but runtime-light, no TLS/HTTP of its own.
scraper  = { version = "0.27", default-features = false, features = ["errors"] }
# Node 2.4 Extract from File: CSV / XLSX → JSON. Both pure Rust, no TLS.
# calamine's `dates` feature reuses the in-tree chrono for Excel date cells.
csv      = "1.4"
calamine = { version = "0.36", default-features = false, features = ["dates"] }

# Node 2.7 XML / Markdown: pure-Rust converters, no TLS/HTTP of their own.
# Markdown→HTML rendering uses pulldown-cmark; HTML→Markdown reuses `scraper`
# (already in tree for 2.3) walking its DOM, which needs `ego-tree` (scraper's
# own tree crate, already pulled in transitively — just naming it directly).
quick-xml      = { version = "0.36", default-features = false, features = ["escape-html"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ego-tree       = "0.11"

# Node 2.6 Compression: zip/unzip/gzip/gunzip. Both crates are promotions of
# deps already resolved transitively — `zip` via calamine's XLSX reader (2.4),
# `flate2` via `zip`'s deflate backend and reqwest's response decompression —
# same `zlib-rs` pure-Rust backend both ways, so this adds no new compile
# weight (verified with `cargo tree`, per dependency policy).
zip    = { version = "8", default-features = false, features = ["deflate"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }

# In-process MCP integration services (Google/Microsoft/Facebook/Instagram/CRM).
rmcp           = { version = "0.1", features = ["server"] }
axon-core      = { path = "../axon-core" }
axon-google    = { path = "../axon-google" }
axon-microsoft = { path = "../axon-microsoft" }
axon-facebook  = { path = "../axon-facebook" }
axon-instagram = { path = "../axon-instagram" }
axon-business  = { path = "../axon-business" }
axon-crm       = { path = "../axon-crm" }

