[package]
name = "axon-business"
version = "2.0.0"
edition = "2021"

[dependencies]
axon-core = { path = "../axon-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rmcp = { version = "0.1", features = ["server"] }
uuid = { version = "1.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
