[package]
name = "axon-business"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
axon-core = { path = "../axon-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
rmcp = { version = "1", default-features = false }
uuid = { version = "1.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
