[package]
name = "axon-crm"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
axon-core   = { path = "../axon-core" }
rmcp        = { version = "1", default-features = false }
anyhow      = "1"
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1.22.0", features = ["v4"] }
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tracing     = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
