[package]
name = "axon-facebook"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
axon-core = { path = "../axon-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
rmcp = { version = "0.1", features = ["server"] }
mime_guess = "2.0.5"
reqwest = "0.11"
