[package]
name = "axon-instagram"
version = "2.0.0"
edition = "2021"

[dependencies]
axon-core = { path = "../axon-core" }
axon-facebook = { path = "../axon-facebook" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmcp = { version = "0.1", features = ["server"] }
url = "2.5"
