[package]
name = "axon-microsoft"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
axon-core = { path = "../axon-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
rmcp = { version = "1", default-features = false }
chrono = "0.4"
base64 = "0.22.1"
